--- a/MovieQuotes/app/src/main/res/values/strings.xml
+++ b/MovieQuotes/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="clear_condensed">Clear</string>
     <string name="confirm_delete_title">Confirm delete</string>
     <string name="confirm_delete_message">Are you sure you want to delete this quote?</string>
+    <string name="dialog_which_settings_title">Which settings do you want?</string>
+    <string-array name="settings_types">
+        <item>Sound</item>
+        <item>Search</item>
+        <item>General</item>
+    </string-array>
 </resources>
